--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "create-db-tables": "node ./ETL/loadDb-Tables.js",
-    "load-csv": "node ./ETL/loadData.js"
+    "create-db-tables": "node ./database/ETL/loadDb-Tables.js",
+    "load-csv": "node ./database/ETL/loadData.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/SDC-Team-Griffin/SDC-Products#readme",
   "dependencies": {
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "pg": "^8.11.1"
   },
   "devDependencies": {
