--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "create-db-tables": "node ./database/ETL/loadDb-Tables.js",
-    "load-csv": "node ./database/ETL/loadData.js"
+    "load-csv": "node ./database/ETL/loadData.js",
+    "server-dev": "node ./server/server.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,8 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
+    "morgan": "^1.10.0",
     "pg": "^8.11.1"
   },
   "devDependencies": {
