--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This repository contains the code for the SDC-Products project, which includes a Node.js server and database files for PostgreSQL.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "create-db-tables": "node ./database/ETL/loadDb-Tables.js",
     "load-csv": "node ./database/ETL/loadData.js",
     "server-dev": "node ./server/server.js"
@@ -28,11 +28,16 @@
     "pg": "^8.11.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.22.9",
+    "@babel/preset-env": "^7.22.9",
+    "babel-jest": "^29.6.1",
     "eslint": "^8.44.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.32.2"
+    "eslint-plugin-react": "^7.32.2",
+    "jest": "^29.6.1",
+    "supertest": "^6.3.3"
   }
 }
