--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "jest",
     "create-db-tables": "node ./database/ETL/loadDb-Tables.js",
     "load-csv": "node ./database/ETL/loadData.js",
-    "server-dev": "node ./server/server.js"
+    "server-dev": "node ./server/server.js",
+    "stress-test": "k6 run k6-tests/k6test.js"
   },
   "repository": {
     "type": "git",
@@ -21,14 +22,18 @@
   },
   "homepage": "https://github.com/SDC-Team-Griffin/SDC-Products#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "k6": "^0.0.0",
     "morgan": "^1.10.0",
     "pg": "^8.11.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.22.9",
     "@babel/core": "^7.22.9",
+    "@babel/node": "^7.22.6",
     "@babel/preset-env": "^7.22.9",
     "babel-jest": "^29.6.1",
     "eslint": "^8.44.0",
